[workspace]
members = ["apps/forwarder", "apps/handler", "crates/common"]
resolver = "2"

[workspace.package]
version = "0.3.2"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/http-tunnel"
repository = "https://github.com/tyrchen/http-tunnel"
homepage = "https://github.com/tyrchen/http-tunnel"
readme = "README.md"
categories = ["development-tools"]
keywords = ["http", "tunnel", "proxy", "ngrok"]

[workspace.dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
] }
tracing = "0.1"

# Workspace crates
http-tunnel-common = { path = "crates/common", version = "0.3.2" }
