[package]
name = "ttf"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
description = "HTTP tunnel forwarder application"

[[bin]]
name = "ttf"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
http-tunnel-common = { workspace = true }
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "net",
  "io-util",
  "signal",
] }
serde = { workspace = true }
serde_json = { workspace = true }

# CLI and configuration
clap = { version = "4.5", features = ["derive", "env"] }

tokio-tungstenite = { version = "0.28", features = [
  "rustls-tls-native-roots",
] } # WebSocket client
futures-util = "0.3"

# HTTP client
reqwest = { version = "0.12", features = [
  "json",
  "rustls-tls",
], default-features = false }
rustls = { version = "0.23", features = ["ring"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL parsing
url = "2.5"
