[package]
name = "http-tunnel-handler"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
documentation.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
categories.workspace = true
keywords.workspace = true
description = "HTTP tunnel handler application"

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
http-tunnel-common = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# HTTP types
http = "1.4"

# AWS Lambda
lambda_runtime = "1"
aws_lambda_events = { version = "1", default-features = true, features = [
  "dynamodb",
] }

# AWS SDK
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.101"
aws-sdk-apigatewaymanagement = "1.91"
aws-sdk-eventbridge = "1.98"
rustls = { version = "0.23", features = ["ring"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Content rewriting
regex = "1.12"
once_cell = "1.21"

# Authentication
jsonwebtoken = { version = "10", default-features = false, features = [
  "rust_crypto",
] }
chrono = "0.4.42"
serde_dynamo = "4.3.0"
base64 = "0.22"

[[bin]]
name = "handler"
path = "src/main.rs"
